--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -13,13 +13,13 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img width="300" height="150" src="{% static 'images/main.png' %}" class="d-block w-50 mx-auto" alt="...">
+                <img src="{% static 'images/main.png' %}" class="d-block w-50 mx-auto" alt="...">
             </div>
             <div class="carousel-item">
-                <img width="300" height="150" src="{% static 'images/cart.png' %}" class="d-block w-50 mx-auto" alt="...">
+                <img src="{% static 'images/cart.png' %}" class="d-block w-50 mx-auto" alt="...">
             </div>
             <div class="carousel-item">
-                <img width="300" height="150" src="{% static 'images/bookgirl.png' %}" class="d-block w-50 mx-auto" alt="...">
+                <img src="{% static 'images/bookgirl.png' %}" class="d-block w-50 mx-auto" alt="...">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
